syntax = "proto3";

package object;


import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "ledger/object/lifeline.proto";
import "github.com/insolar/insolar/insolar/record/record.proto";

message IndexBucket {
    option (gogoproto.equal) = false;

    int32  __polymorph  = 16;

    bytes ObjID = 20 [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.ID", (gogoproto.nullable) = false];

    Lifeline Lifeline = 21 [(gogoproto.nullable) = false];
    uint32 LifelineLastUsed = 22 [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.PulseNumber", (gogoproto.nullable) = false];

    repeated record.Virtual PendingRecords = 23 [(gogoproto.customtype) = "github.com/insolar/insolar/insolar/record.Virtual", (gogoproto.nullable) = false];
}
